# dotfiles

./: .gitmodules  Makefile  README.md
fish/: config.fish  module.mk
pywal/: module.mk
pywal/colorschemes/dark/: everforest-dark-hard.json  nord.json
pywal/templates/: colors.fish
vim/: init.vim  module.mk  vimrc
xmonad/: Main.hs  build  cabal.project  module.mk  xmonad-conf.cabal
xmonad/lib/: Bar.hs  Lemonbar.hs  Resources.hs  Xresources.hs
xmonad/lib/Bar/: APM.chs  Lemonbar.hs  Modules.hs
xmonad/lib/Resources/: Color.hs
xmonad/lib/Xresources/: XRM.chs
xmonad/xmonad-bar/: xmonad-bar.cabal
xmonad/xmonad-bar/app/: Main.hs
xmonad/xmonad-bar/src/: Bar.hs  BarExperimental.hs  Lemonbar.hs
xmonad/xmonad-bar/src/Bar/: APM.chs  Modules.hs  X11.hs
xmonad/xmonad-bar/src/Bar/App/: Env.hs  Monad.hs
xmonad/xmonad-bar/src/Bar/X11/: Cairo.chs  Draw.hs  Window.hs
xmonad/xmonad-conf/: xmonad-conf.cabal
xmonad/xmonad-conf/app/: Main.hs
xmonad/xmonad-conf/src/Resources/: Color.hs  XRM.chs
