name:          xmonad-conf
version:       0.1.0.0
synopsis:      Personal XMonad configuration
license:       ISC
author:        Jared Beller <jbellerb@vt.edu>
maintainer:    Jared Beller <jbellerb@vt.edu>
copyright:     Copyright (c) 2020 Jared Beller
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:    Bar
                      , Bar.APM
                      , Bar.Lemonbar
                      , Bar.Modules
                      , Colors
  build-tool-depends: c2hs:c2hs
  build-depends:      base >=4.12 && <4.13
                      , data-default
                      , ioctl
                      , process
                      , stm
                      , time
                      , unix
                      , xmonad
                      , xmonad-contrib
  hs-source-dirs:     lib
  default-language:   Haskell2010

executable xmonad-conf
  main-is:          Main.hs
  build-depends:    base >=4.12 && <4.13
                    , xmonad-conf
                    , data-default
                    , xmonad
                    , xmonad-contrib
  default-language: Haskell2010
