cabal-version: 2.2
name:          xmonad-conf
version:       0.1.0
build-type:    Simple
license:       GPL-3.0-or-later
license-file:  ../LICENSE
copyright:     (c) 2020-2021 Jared Beller
author:        Jared Beller <jbellerb@vt.edu>
maintainer:    Jared Beller <jbellerb@vt.edu>
stability:     alpha
tested-with:   GHC == 8.6.4
synopsis:      Personal XMonad configuration
description:   This is my personal XMonad configuration for use with OpenBSD.
               A majority of the code here is to manage Lemonbar, which is
               controlled entirely with Haskell instead of shell scripts.

library
  default-language: Haskell2010
  hs-source-dirs: lib

  build-depends:
    base >=4.12 && <4.13,
    data-default,
    ioctl,
    process,
    stm,
    time,
    unix,
    xmonad,
    xmonad-contrib
  build-tool-depends: c2hs:c2hs

  exposed-modules:
    Bar
    Bar.APM
    Bar.Modules
    Colors
    Lemonbar

executable xmonad-conf
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base >=4.12 && <4.13,
    xmonad-conf,
    data-default,
    xmonad,
    xmonad-contrib
