cabal-version: 2.2
name:          xmonad-bar
version:       0.1.0
build-type:    Simple
license:       GPL-3.0-or-later
license-file:  ../../LICENSE
copyright:     (c) 2020-2022 Jared Beller
author:        Jared Beller <jbellerb@vt.edu>
maintainer:    Jared Beller <jbellerb@vt.edu>
stability:     alpha
tested-with:   GHC == 8.10.6
synopsis:      Personal bar for XMonad configuration
description:   This library provides an interface to control Lemonbar directly
               from XMonad, using Haskell instead of shell scripts.

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    base >=4.14 && <4.15,
    async,
    bytestring,
    cairo,
    data-default,
    ioctl,
    mtl,
    process,
    stm,
    time,
    unix,
    xmonad,
    xmonad-contrib,
    X11
  build-tool-depends: c2hs:c2hs

  exposed-modules:
    Bar
    Bar.APM
    Bar.App.Env
    Bar.App.Monad
    Bar.Modules
    Bar.X11.Cairo
    Bar.X11.Window
    BarExperimental
    Lemonbar

executable xmonad-bar
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: app

  build-depends:
    base >=4.14 && <4.15,
    xmonad-bar
