cabal-version: 2.2
name:          xmonad-conf
version:       0.1.1
build-type:    Simple
license:       GPL-3.0-or-later
license-file:  ../../LICENSE
copyright:     (c) 2020-2022 Jared Beller
author:        Jared Beller <jbellerb@vt.edu>
maintainer:    Jared Beller <jbellerb@vt.edu>
stability:     alpha
tested-with:   GHC == 9.2.5
synopsis:      Personal XMonad configuration
description:   This is my personal XMonad configuration for use with OpenBSD.
               A majority of the code here is to manage Lemonbar, which is
               controlled entirely with Haskell instead of shell scripts.

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    base >=4.14 && <4.17,
    colour,
    data-default,
    xmonad,
    xmonad-contrib,
    X11
  build-tool-depends: c2hs:c2hs

  exposed-modules:
    Resources
    Resources.Color
    Resources.XRM

executable xmonad-conf
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: app

  build-depends:
    base >=4.14 && <4.17,
    xmonad-bar,
    xmonad-conf,
    data-default,
    xmonad,
    xmonad-contrib
